<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<ScrollView
    android:id="@+id/scroll_view"

    android:layout_height="wrap_content"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_github_searcher2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/github_searcher"
        android:textSize="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <ImageView
        android:id="@+id/screen2_iv"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_github_searcher2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"/>
    <TextView
        android:id="@+id/screen2_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username2"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/screen2_iv"
        app:layout_constraintStart_toEndOf="@id/screen2_iv"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="10dp"/>
<TextView
        android:id="@+id/screen2_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/screen2_username"
        app:layout_constraintStart_toStartOf="@id/screen2_username"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/screen2_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/screen2_email"
        app:layout_constraintStart_toStartOf="@id/screen2_email"
        android:layout_marginTop="10dp"/>
<TextView
        android:id="@+id/screen2_joindate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_date"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/screen2_location"
        app:layout_constraintStart_toStartOf="@id/screen2_location"
        android:layout_marginTop="10dp"/>
<TextView
        android:id="@+id/screen2_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/screen2_joindate"
        app:layout_constraintStart_toStartOf="@id/screen2_location"
        android:layout_marginTop="10dp"/>
<TextView
        android:id="@+id/screen2_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/screen2_followers"
        app:layout_constraintStart_toStartOf="@id/screen2_location"
        android:layout_marginTop="10dp"/>
  <TextView
      android:id="@+id/screen2_bio"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/biography"
      app:layout_constraintTop_toBottomOf="@id/screen2_following"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
    <EditText
        android:id="@+id/screen2_search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_for_user_s_repositories"
        app:layout_constraintTop_toBottomOf="@id/screen2_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/screen2_search_et"/>


</LinearLayout>
