<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/screen2_repo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_name"
        android:layout_margin="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/screen2_forks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/screen2_repo_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forks"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/screen2_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/screen2_forks"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="10dp"
        android:text="@string/stars"/>


</androidx.constraintlayout.widget.ConstraintLayout>