<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/screen1_iv"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:color/holo_green_dark"
        android:layout_margin="10dp"/>
    <TextView
        android:id="@+id/screen1_username_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@+id/screen1_iv"
        app:layout_constraintTop_toTopOf="@id/screen1_iv"
        app:layout_constraintBottom_toBottomOf="@id/screen1_iv"
        android:layout_marginLeft="20dp"
        android:text="@string/username"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/screen1_repo_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo"
        android:textSize="20sp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toStartOf="@id/screen1_repo_number"
        app:layout_constraintTop_toTopOf="@id/screen1_iv"
        app:layout_constraintBottom_toBottomOf="@id/screen1_iv"/>
<TextView
        android:id="@+id/screen1_repo_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/screen1_iv"
        app:layout_constraintBottom_toBottomOf="@id/screen1_iv"/>

</androidx.constraintlayout.widget.ConstraintLayout>